--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>D3 Bar Chart</h1>
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
