Solver user story #1

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <title>fCC d3 Bar Chart</title>
   </head>
   <body>
-    <h1>D3 Bar Chart</h1>
+    <h1 id="title">D3 Bar Chart</h1>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="script.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
