--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   </head>
   <body>
     <h1 id="title">D3 Bar Chart</h1>
+    <hr />
+    <h2>Adding p elements</h2>
+    <div id="pExample"></div>
+    <br />
+    <hr />
+    <h2>Adding a simple bar chart</h2>
+    <svg class="bar-chart"></svg>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="script.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
