--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <h1 id="title">D3 Bar Chart</h1>
+    <svg class="bar-chart"></svg>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="script.js"></script>
