--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>fCC d3 Bar Chart</title>
   </head>
   <body>
-    <h1 id="title">D3 Bar Chart</h1>
+    <h1 id="title">United States GDP</h1>
     <svg class="bar-chart"></svg>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
