--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   </head>
   <body>
     <h1 id="title">United States GDP</h1>
-    <svg class="bar-chart"></svg>
+    <div id="chartContainer"></div>
 
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="script.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
